<resources>
    <string name="foreground_service_justification">Приложението изисква връзка с камерата за изтегляне на видео записи дори когато екранът е изключен.</string>
    <string name="app_name">HTTP 70MAI dashcam transfer</string>
    <string name="btn_start">Старт</string>
    <string name="btn_stat">Статистика</string>
    <string name="btn_token">Токен</string>
    <string name="btn_stop">Стоп</string>
    <string name="btn_no_sleep">Не заспива</string>
    <string name="btn_album">Режим Албум</string>
    <string name="btn_inject">Инжект</string>
    <string name="label_reset">Нулиране</string>
    <string name="label_functions">Функции</string>
    <string name="label_network">Мрежа</string>
    <string name="cam_settings_title">Настройки за Камера</string>
    <string name="cam_ip_hint">Напр. 192.168.1.1</string>
    <string name="cam_user_hint">Потребителски номер за HTTP</string>
    <string name="cam_pass_hint">Ключ за HTTP</string>
    <string name="archive_settings_title">Настройки за Архив (SFTP)</string>
    <string name="archive_ip_hint">IP адрес на SFTP сървъра</string>
    <string name="archive_user_hint">Потребителско име за SFTP</string>
    <string name="archive_pass_hint">Парола за SFTP</string>
    <string name="archive_path_hint">Път за качване, напр. /backups/</string>
    <string name="select_language">Избор на език</string>
    <string name="status_idle">В изчакване</string>
    <string name="speed_idle">0 KB/s</string>
    <string name="tab_transfer">Трансфер</string>
    <string name="tab_settings">Настройки</string>
    <string name="label_camera_ip">Камера IP</string>
    <string name="label_camera_ssid">Wi-Fi Име (SSID)</string>
    <string name="label_camera_wifi_pass">Wi-Fi Парола</string>
    <string name="btn_connect_wifi">Свържи Wi-Fi</string>
    <string name="label_archive_ip">Архив IP</string>
    <string name="label_archive_user">Архив Потребител</string>
    <string name="label_archive_pass">Архив Парола</string>
    <string name="label_archive_path">Архив Път</string>
    <string name="label_last_download">Последно изтегляне: %1$s</string>
    <string name="label_total_downloaded">Общо изтеглени: %1$d</string>
    <string name="label_last_duration">Време на последен трансфер: %1$s</string>
    <string name="label_pending_camera">Оставащи в камерата: %1$d</string>
    <string name="label_last_upload">Последно качване: %1$s</string>
    <string name="label_total_uploaded">Общо качени: %1$d</string>
    <string name="label_pending_sftp">Оставащи за качване: %1$d</string>
    <string name="label_current_file">Файл: %1$s</string>
    <string name="label_current_speed">Скорост: %1$s</string>
    <string name="status_running">Изпълнява се цикъл за трансфер...</string>
    <string name="status_waiting_initial">Очаква се първоначална проверка.</string>
    <string name="status_waiting_start">В очакване на стартиране.</string>
    <string name="status_next_check">В изчакване. Следваща проверка след %1$dм %2$dс.</string>
    <string name="msg_http_success">HTTP: Цикълът завърши</string>
    <string name="msg_sftp_success">SFTP: Файловете са качени</string>
    <string name="msg_sftp_idle">SFTP: Няма файлове за качване</string>
    <string name="label_access_point">70mai_d08_xxxx</string>
    <string name="label_access_point_password">Парола</string>
</resources>
